2007-04-05 17:07 -0700  Brendan Cully  <brendan@kublai.com>  (26b19fc9b78c)

	* hcache.c: Do not cache some unsafe header fields.

	* imap/message.c, mh.c: Small hcache-related memory leaks

	* hcache.c, mh.c: Fix mh header caching (closes #2472)

	* configure.ac: Teach --with-gdbm to accept a prefix (closes #2413)

	* hcachever.sh: POSIX fixes for hcachever.sh

2007-04-05 13:06 -0700  Jukka Salmi  <j+mutt@2007.salmi.ch>  (3638701db407)

	* ChangeLog, configure.ac: Check for BDB4 libs in $lib as well as
	$lib/$ver (fixes pkgsrc BDB4 detection)

2007-04-05 12:55 -0700  Brendan Cully  <brendan@kublai.com>  (4f435337507e)

	* Makefile.am, hcache.c, hcachever.sh: Version header cache against
	MD5 of structures on which it depends

	* UPDATING, globals.h, imap/browse.c, imap/imap_private.h, init.h:
	Remove broken namespace support

2007-04-04 16:31 -0700  Brendan Cully  <brendan@kublai.com>  (e96bd1f85634)

	* imap/command.c: Only reset UIDNEXT if new mail has been detected.
	This prevents mutt from suddenly finding new mail when switching
	from unknown UIDVALIDITY to known.

2007-04-04 09:37 -0700  Fabian Groffen  <grobian@orakel.ods.org>  (330cb15403f0)

	* configure.ac: Check for Berkeley DB versions 4.4 and 4.5

2007-04-04 01:35 +0200  Christoph Berg  <cb@df7cb.de>  (b841df908929)

	* cryptglue.c: Fix typos in CRYPT_BACKEND #ifs.

2007-04-03 14:08 -0700  Christoph Berg  <cb@df7cb.de>  (339fd21bf139)

	* doc/manual.xml.head, doc/mutt.man, main.c: When -- is present in
	the argument list, allow attachment globs. The -- separates file
	names from recipients. Also works for -A and -Q.

2007-04-03 10:54 -0700  Fabian Groffen  <grobian@orakel.ods.org>  (89abe8bd0713)

	* hdrline.c, imap/message.c, mh.c, muttlib.c, regex.c, sendlib.c: Fix
	some warnings.

2007-04-03 08:59 -0700  Brendan Cully  <brendan@kublai.com>  (e363d7a69046)

	* pop_auth.c, rfc822.c, rfc822.h: Validate msgid in APOP
	authentication. Closes #2846

	* hcache.c: Fix DB4 crash introduced in d5ab883ef90a
